# QtAtcMonitor

./: .gitignore  CMakeLists.txt  README.md  appconfig.cpp  appconfig.h  conflictdetector.cpp  conflictdetector.h  datagenerator.cpp  datagenerator.h  flight.h  flightsmodel.cpp  flightsmodel.h  flightsproxymodel.cpp  flightsproxymodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  radarview.cpp  radarview.h  settingsdialog.cpp  settingsdialog.h
tests/: CMakeLists.txt  test_conflict_detector.cpp
